--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,70 @@
-html {overflow-y: scroll}
-body{max-width:800px;margin:40px auto;padding:0 10px;font:14px/1.5 monospace;color:#444}h1,h2,h3{line-height:1.2}@media (prefers-color-scheme: dark){body{color:white;background:#444}a:link{color:#5bf}a:visited{color:#ccf}}
-p > code{color: #FFFFFF; background:#000000; padding:2px}
-pre{color: #FFFFFF; background:#000000; padding:24px; white-space: pre-wrap}
-article{padding:24px 0}
-.center {display: block;margin-left: auto;margin-right: auto;width: 100%;}
+:root {
+    --font-color: #f5deb3;
+    --body-color: #2E3440;
+    --link-color: #81A1C1;
+    --link-visited-color: #B48EAD;
+}
+
+html {
+    overflow-y: scroll
+}
+
+body {
+    max-width: 800px;
+    margin: 40px auto;
+    padding: 0 10px;
+    font: 14px/1.5 monospace;
+    color: var(--font-color);
+    background: var(--body-color);
+}
+
+a:link {
+    color: var(--link-color);
+}
+
+a:visited {
+    color: var(--link-visited-color);
+}
+
+h1,h2,h3 {
+    line-height:1.2
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+	color: var(--font-color);
+	background: var(--body-color);
+    }
+
+    a:link {
+	color: var(--link-color);
+    }
+
+    a:visited {
+	color: var(--link-visited-color);
+    }
+}
+
+p > code {
+    color: var(--font-color);
+    background: var(--body-color);
+    padding:2px
+}
+
+pre {
+    color: var(--font-color);
+    background: var(--body-color);
+    padding: 24px;
+    white-space: pre-wrap
+}
+
+article {
+    padding: 24px 0
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
