better colors again

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,8 @@
 :root {
     --font-color: black;
     --body-color: #ffd;
-    --link-color: #5E81AC;
-    --link-visited-color: #745d70;
+    --link-color: #54749a;
+    --link-visited-color: #7a49a5;
 }
 
 html {
