--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,26 +1,27 @@
 {{ define "main" }}
-	<main>
-		{{ $listtitle := .Title }}
-		{{ if or .Title .Content }}
-		<div>
-			{{ with .Title }}<h1>{{ . }}</h1>{{ end }}
-			{{ with .Content }}<div>{{ . }}</div>{{ end }}
-		</div>
-		{{ end }}
-		
-		<ul>
-		    {{ range .Paginator.Pages }}
-		    <li>
-		        <div class="post-title">
-				{{ if eq $listtitle "Posts" }}
-				    {{ .Date.Format "2006-01-02" }} <a href="{{ .RelPermalink }}">{{.Title }}</a>
-				{{ else }}
-				    <a href="{{ .RelPermalink }}">{{.Title }}</a>
-				{{ end }}
-		        </div>
-		    </li>
-		    {{ end }}
-		</ul>
-		{{ partial "pagination.html" . }}
-	</main>
+<main>
+  {{ $listtitle := .Title }}
+  {{ if or .Title .Content }}
+  <div>
+    {{ with .Title }} <h1> {{ . }} </h1> {{ end }}
+    {{ with .Content }} <div> {{ . }} </div> {{ end }}
+  </div>
+  {{ end }}
+
+  <ul style="list-style-type:none;">
+    {{ range .Paginator.Pages }}
+    <li>
+      <div class="list-title">
+	{{ if eq $listtitle "Posts" }}
+	{{ .Date.Format "2006.01.02" }} &nbsp;&nbsp;
+	<a href="{{ .RelPermalink }}"> {{.Title }}</a>
+	{{ else }}
+	<a href="{{ .RelPermalink }}">{{.Title }}</a>
+	{{ end }}
+      </div>
+    </li>
+    {{ end }}
+  </ul>
+  {{ partial "pagination.html" . }}
+</main>
 {{ end }}
