--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,13 +1,19 @@
 <article>
-	<h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
-	<b><time>{{ .Date.Format (default "2006-01-02 15:04:05" .Site.Params.dateFmt) }}</time></b>
-	{{ range .Params.tags }}
-	<a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
-	{{ end }}
-	<div>
-		{{ .Summary }}
-		{{ if .Truncated }}
-			<a href="{{ .Permalink }}">Read more...</a>
-		{{ end }}
-	</div>
+  <div class="summary-title">
+    <a href="{{ .Permalink }}">{{ .Title }}</a>
+  </div>
+  <div class="summary-subtext">
+    <b>
+      <time> {{ .Date.Format (default "2006-01-02" .Site.Params.dateFmt) }} </time>
+    </b>
+  </div>
+  {{ range .Params.tags }}
+  <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}"> {{ . }} </a>
+  {{ end }}
+  <div>
+    {{ .Summary }}
+    {{ if .Truncated }}
+    <a href="{{ .Permalink }}">Read more...</a>
+    {{ end }}
+  </div>
 </article>
