--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,12 +10,36 @@ html {
 }
 
 body {
-    max-width: 800px;
-    margin: 40px auto;
-    padding: 0 10px;
-    font: 14px/1.5 monospace;
+    max-width: 750px;
+    padding: 40px 20px;
+    margin: 0 auto;
+    font-family: times, Times New Roman, times-roman, georgia, serif;
     color: var(--font-color);
     background: var(--body-color);
+}
+
+pre, code {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1rem;
+    color: var(--font-color);
+    background: var(--body-color);
+    white-space: pre-wrap;
+}
+
+article {
+    font-weight: 400;
+    font-size: 1.2rem;
+    line-height: 1.3;
+    padding: 24px 0;
+    text-align: justify;
+}
+
+blockquote {
+  margin: 20px 20px;
+  padding: 0 20px;
+  border-left: 2px solid black;
+  text-align: left;
+  font-style: italic;
 }
 
 a:link {
@@ -26,8 +50,73 @@ a:visited {
     color: var(--link-visited-color);
 }
 
-h1,h2,h3 {
-    line-height:1.2
+.site-title {
+    font-size: 2rem;
+    line-height: 1.2;
+    letter-spacing: -1.5px;
+    font-weight: bold;
+    padding-top: 5px;
+}
+
+.site-subtext {
+    float: right;
+    padding-top: 5px;
+    vertial-align: bottom;
+    letter-spacing: -1px;
+    font-size: 1.2rem;
+    font-weight: normal;
+}
+
+.post-title {
+    line-height: 0.2;
+    border-top: 3px solid black;
+    font-size: 2.8rem;
+}
+
+.post-subtext {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+    padding-bottom: 15px;
+    border-bottom: 3px solid black;
+    letter-spacing: 3px;
+}
+
+.post-content >p:first-of-type:first-letter {
+    float: left;
+    font-family: Georgia;
+    font-size: 3rem;
+    line-height: 0.8em;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
+}
+
+.summary-title {
+    font-size: 1.3rem;
+    margin-bottom: 5px;
+}
+
+.summary-subtext {
+    font-size: 1.1rem;
+    margin-bottom: 2px;
+}
+
+.list-title {
+    font-size: 1.3rem;
+    margin-bottom: 5px;
+}
+
+.links {
+    text-align: right;
+    padding: 10px 2px;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -43,28 +132,4 @@ h1,h2,h3 {
     a:visited {
 	color: var(--link-visited-color);
     }
-}
-
-p > code {
-    color: var(--font-color);
-    background: var(--body-color);
-    padding:2px
-}
-
-pre {
-    color: var(--font-color);
-    background: var(--body-color);
-    padding: 24px;
-    white-space: pre-wrap
-}
-
-article {
-    padding: 24px 0
-}
-
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
 }
