--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,8 +59,8 @@ blockquote {
 }
 
 .site-title a:link, .site-title a:visited {
-    text-decoration: none;
-    color: var(--link-color);
+    text-decoration: none !important;
+    color: var(--link-color) !important;
 }
 
 .site-subtext {
