--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -3,9 +3,8 @@
     <a href="{{ .Permalink }}">{{ .Title }}</a>
   </div>
   <div class="summary-subtext">
-    <b>
-      <time> {{ .Date.Format (default "2006-01-02" .Site.Params.dateFmt) }} </time>
-    </b>
+    <b><time> {{ .Date.Format (default "2006-01-02" .Site.Params.dateFmt) }} </time></b>
+    <div style="color: grey;"> {{ .WordCount }} words </div>
   </div>
   {{ range .Params.tags }}
   <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}"> {{ . }} </a>
